# ai-sdk

./: .coverage  .env.example  .gitignore  404.html  CONTRIBUTING.md  README.md  index.html  index.txt  pyproject.toml
.cursor/rules/: structure.mdc
.github/workflows/: deploy.yml  publish.yml  release.yml  test.yml
_next/static/chunks/: 665-7bba0929b19213cf.js  684-ca9bf060fcfcaa6b.js  699-02309e7e1c9d777d.js  main-4d5531e8de9f86e2.js  main-app-b783ce950678565a.js  webpack-9f4e62640902f9d5.js
docs/: next.config.mjs  package-lock.json  package.json
docs/app/: layout.jsx
docs/content/: _meta.js  index.mdx
docs/content/guides/: _meta.js  models.mdx  overview.mdx  structured_outputs.mdx  text_generation.mdx
docs/content/providers/: _meta.js  anthropic.mdx  openai.mdx  openrouter.mdx
guides/: models.html  models.txt  overview.html  overview.txt  structured_outputs.html  structured_outputs.txt  text_generation.html  text_generation.txt
optimization/structured_output/: README.md  evaluation.py  metric.py  requirements.txt  utils.py
optimization/structured_output/evaluation/: run_eval.py
providers/: anthropic.html  anthropic.txt  openai.html  openai.txt  openrouter.html  openrouter.txt
src/ai_sdk/: __init__.py
src/ai_sdk/anthropic/: chat_model.py  provider.py
src/ai_sdk/core/: convert_response.py  generate_object.py  generate_text.py  language_model.py
src/ai_sdk/openai/: chat_model.py  provider.py
src/ai_sdk/openrouter/: __init__.py  chat_model.py
tests/e2e/generate_object/: test_object_anthropic.py  test_object_openai.py
(+6 files in other folders)
