[project]
name = "ai-sdk"
version = "0.1.0"
description = ""
authors = [
    {name = "Jacques",email = "jverre@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pydantic (>=2.10.6,<3.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "anthropic (>=0.49.0,<0.50.0)",
    "validators (>=0.34.0,<0.35.0)"
]

[tool.poetry]
packages = [{include = "ai_sdk", from = "src"}]

[tool.poetry.group.test.dependencies]
pytest = "^8.0.0"
pytest-cov = "^4.1.0"
python-dotenv = "^1.0.0"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
addopts = "-v -s"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
